Mon May 20 19:33:55 2013  Benoit Daloze  <eregontp@gmail.com>

	* math.c: improve and fix documentation of sin, tan and log

Mon May 20 19:31:49 2013  Benoit Daloze  <eregontp@gmail.com>

	* lib/logger.rb (Logger::Application): show namespace in documentation

Mon May 20 11:50:12 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/pp.rb: Revert part of r40834 and nodoc PP::ObjectMixin
	  [ruby-core:55068]

Mon May 20 10:40:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/htmlutils.rb (WEBrick::HTMLUtils#escape): replace HTML
	  meta chars even in non-ascii string.  [Bug #8425] [ruby-core:55052]

	* lib/webrick/httputils.rb (WEBrick::HTTPUtils#{_escape,_unescape}):
	  fix %-escape encodings.  [Bug #8425] [ruby-core:55052]

	* lib/webrick/httpservlet/filehandler.rb (set_dir_list): revert r20152
	  partially and fix misuse of bytesize and regexp repetition operator.

Mon May 20 08:03:51 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/profiler.rb: Document Profiler__ methods

Mon May 20 08:02:13 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/tempfile.rb: nodoc Tempfile#inspect

Mon May 20 07:48:24 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/stringio/stringio.c: Correct position of method rdoc

Mon May 20 07:27:41 2013  Zachary Scott  <zachary@zacharyscott.net>

	* math.c: RDoc formatting of Math core docs with domains and codomains
	  Patch by @eLobato [Fixes GH-309]

Mon May 20 05:58:12 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/bigdecimal/bigdecimal.c: Formatting for BigMath [Fixes GH-306]
	  Based on a patch by @eLobato.
	* ext/bigdecimal/lib/bigdecimal/math.rb: ditto

Mon May 20 04:56:59 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/forwardable.rb: Forwardable examples in overview were broken
	  Based on patch by @joem [Fixes GH-303] [Bug #8392]

Mon May 20 03:35:26 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/optparse.rb: nodoc OptionParser::Version and SPLAT_PROC
