@@ -1,3 +1,7 @@
+Mon May 20 20:36:19 2013  Zachary Scott  <zachary@zacharyscott.net>
+
+	* lib/securerandom.rb: Update position of overview for RDoc
+
 Mon May 20 19:33:55 2013  Benoit Daloze  <eregontp@gmail.com>
 
 	* math.c: improve and fix documentation of sin, tan and log
